# pwconn

./: README.md  alsa_info.py  main.py  main.tcss  pyproject.toml
src/pwconn/: alsa_info.py  pwconn.py
