[project]
name = "pwconn"
version = "0.1.0"
description = "Manage Pipewire connections via a TUI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "textual>=5.3.0",
    "textual-dev>=1.7.0",
]

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[project.scripts]
pwconn = "pwconn:main"

